syntax = "proto3";

package usergrpc;

option go_package = "/usergrpc";


message User {
  int32 ID = 1;
  string full_name = 2;
  string email = 3;
  string password = 4;
  string created_at = 5;
  string updated_at = 6;
}

message RegisterPayload {
  string full_name = 1;
  string email = 2;
  string password = 3;
}

message RegisterRequest {
  RegisterPayload payload = 1;
}

message LoginPayload {
  string email = 1;
  string password = 2;
}

message LoginRequest {
  LoginPayload payload = 1;
}

message RefreshTokenPayload {
  string refresh_token = 1;
}

message RefreshTokenRequest {
  RefreshTokenPayload payload = 1;
}

message EmptyResponse{}

message TokenResponse {
  string message = 1;
  string token = 2;
  string expired_at = 3;
  string refresh_token = 4;
  string refresh_token_expired_at = 5;
  string role = 6;
}

service AuthService {
  rpc Register(RegisterRequest) returns (EmptyResponse);
  rpc Login(LoginRequest) returns (TokenResponse);
  rpc RefreshToken(RefreshTokenRequest) returns (TokenResponse);
}
